--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,12 +1,38 @@
 body {
-  /* background-color: red;
-  width: 100%;
-  height: 100vh;
-  display: flex;
+  margin: 0px;
+  background-color: red;
+  /* width: 100%;
+  height: 100vh; */
+  /* box-sizing: border-box; */
+  /* display: flex;
   justify-content: center;
   align-items: center; */
+  
 }
 
 main {
-  width: 900px;
+  width: 800px;
+  background-color: antiquewhite;
+}
+
+.content__fields {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 30px;
+}
+
+.content__products {
+  border-top: 1px solid black;
+  padding: 0 30px;
+  height: 700px;
+  overflow-y: auto;
+
+}
+
+.content__products--fields {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid salmon;
+  margin-bottom: 10px;
+
 }
