--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 body {
   margin: 0px;
-  background-color: red;
+  background-color: #f9faff;
   /* width: 100%;
   height: 100vh; */
   /* box-sizing: border-box; */
@@ -11,8 +11,39 @@ body {
 }
 
 main {
-  width: 800px;
-  background-color: antiquewhite;
+  width: 970px;
+  margin: 0 auto;
+}
+
+.header {
+  background-color: white;
+  border-radius: 30px;
+  margin: 30px 0;
+  padding: 30px;
+  height: 90px;
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+
+.header h1 {
+  margin: 0;
+  font-size: 30px;
+  line-height: 30px;
+  color: gray;
+}
+
+.content {
+  background-color: white;
+  border-radius: 30px;
+  padding: 30px 0;
+}
+
+.content__name-buttons {
+  background-color: aqua;
+  padding: 0 30px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .content__fields {
