--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,12 +1,6 @@
 body {
   margin: 0px;
-  background-color: #f9faff;
-  /* width: 100%;
-  height: 100vh; */
-  /* box-sizing: border-box; */
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
+  background-color: #F9FAFF;
   
 }
 
@@ -15,55 +9,11 @@ main {
   margin: 0 auto;
 }
 
-.header {
-  background-color: white;
-  border-radius: 30px;
-  margin: 30px 0;
-  padding: 30px;
-  height: 90px;
-  display: flex;
-  justify-content: space-between;
-  align-items: end;
-}
-
-.header h1 {
-  margin: 0;
-  font-size: 30px;
-  line-height: 30px;
-  color: gray;
-}
-
-.content {
-  background-color: white;
-  border-radius: 30px;
-  padding: 30px 0;
-}
-
-.content__name-buttons {
-  background-color: aqua;
-  padding: 0 30px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.content__fields {
-  display: flex;
-  justify-content: space-between;
-  padding: 0 30px;
-}
-
-.content__products {
-  border-top: 1px solid black;
-  padding: 0 30px;
-  height: 700px;
-  overflow-y: auto;
+@media (max-width: 970px) {
+  main {
+    width: 100%;
+  }
 
 }
 
-.content__products--fields {
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid salmon;
-  margin-bottom: 10px;
 
-}
